package ru.dmitartur.common.grpc.client;

import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
import org.springframework.stereotype.Component;
import ru.dmitartur.common.grpc.*;

import java.util.Optional;

/**
 * gRPC –∫–ª–∏–µ–Ω—Ç –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å –ø—Ä–æ–¥—É–∫—Ç–∞–º–∏
 * –û–±—â–∏–π –∫–æ–º–ø–æ–Ω–µ–Ω—Ç –¥–ª—è –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è –≤ –ª—é–±–æ–º –º–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å–µ
 */
@Slf4j
@Component
@ConditionalOnBean(ProductServiceGrpc.ProductServiceBlockingStub.class)
@RequiredArgsConstructor
public class ProductGrpcClient {

    private final ProductServiceGrpc.ProductServiceBlockingStub productServiceStub;

    /**
     * –ù–∞–π—Ç–∏ –ø—Ä–æ–¥—É–∫—Ç –ø–æ –∞—Ä—Ç–∏–∫—É–ª—É —á–µ—Ä–µ–∑ gRPC
     */
    public Optional<ProductInfo> findProductByArticle(String article) {
        try {
            log.debug("üîç gRPC: Searching product by article: {}", article);
            
            FindByArticleRequest request = FindByArticleRequest.newBuilder()
                    .setArticle(article)
                    .build();
            
            FindByArticleResponse response = productServiceStub.findByArticle(request);
            
            if (response.getFound()) {
                ProductInfoDto productDto = response.getProduct();
                ProductInfo productInfo = convertToProductInfo(productDto);
                
                log.debug("‚úÖ gRPC: Product found by article: {} -> id={}, name={}", 
                         article, productInfo.getId(), productInfo.getName());
                return Optional.of(productInfo);
            } else {
                log.debug("‚ùå gRPC: Product not found: article={}", article);
                return Optional.empty();
            }
            
        } catch (Exception e) {
            log.warn("‚ùå gRPC: Error searching product by article {}: {}", article, e.getMessage());
            return Optional.empty();
        }
    }

    /**
     * –û–±–Ω–æ–≤–∏—Ç—å –æ—Å—Ç–∞—Ç–æ–∫ —Ç–æ–≤–∞—Ä–∞ –ø–æ –∞—Ä—Ç–∏–∫—É–ª—É —á–µ—Ä–µ–∑ gRPC
     */
    public boolean updateProductStockByArticle(String article, int quantityChange) {
        try {
            log.debug("üì¶ gRPC: Updating product stock: article={}, change={}", article, quantityChange);
            
            UpdateStockRequest request = UpdateStockRequest.newBuilder()
                    .setArticle(article)
                    .setQuantityChange(quantityChange)
                    .build();
            
            UpdateStockResponse response = productServiceStub.updateStockByArticle(request);
            
            if (response.getSuccess()) {
                log.debug("‚úÖ gRPC: Product stock updated successfully: article={}, change={}", article, quantityChange);
                return true;
            } else {
                log.warn("‚ö†Ô∏è gRPC: Failed to update product stock: article={}, error={}", 
                        article, response.getErrorMessage());
                return false;
            }
            
        } catch (Exception e) {
            log.error("‚ùå gRPC: Error updating product stock for article {}: {}", article, e.getMessage());
            return false;
        }
    }

    /**
     * –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä–æ–≤–∞—Ç—å ProductInfoDto –≤ ProductInfo
     */
    private ProductInfo convertToProductInfo(ProductInfoDto productDto) {
        ProductInfo productInfo = new ProductInfo();
        productInfo.setId(productDto.getId());
        productInfo.setName(productDto.getName());
        productInfo.setSku(productDto.getSku());
        productInfo.setStock(productDto.getStock());
        productInfo.setBarcode(productDto.getBarcode());
        return productInfo;
    }

    /**
     * DTO –¥–ª—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –ø—Ä–æ–¥—É–∫—Ç–µ
     */
    public static class ProductInfo {
        private Long id;
        private String name;
        private String sku;
        private Integer stock;
        private String barcode;

        // Getters and setters
        public Long getId() { return id; }
        public void setId(Long id) { this.id = id; }
        
        public String getName() { return name; }
        public void setName(String name) { this.name = name; }
        
        public String getSku() { return sku; }
        public void setSku(String sku) { this.sku = sku; }
        
        public Integer getStock() { return stock; }
        public void setStock(Integer stock) { this.stock = stock; }
        
        public String getBarcode() { return barcode; }
        public void setBarcode(String barcode) { this.barcode = barcode; }
    }
}
