package ru.dmitartur.grpc;

import io.grpc.stub.StreamObserver;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.server.service.GrpcService;
import ru.dmitartur.common.grpc.FindByArticleRequest;
import ru.dmitartur.common.grpc.FindByArticleResponse;
import ru.dmitartur.common.grpc.ProductInfoDto;
import ru.dmitartur.common.grpc.ProductServiceGrpc;
import ru.dmitartur.entity.Product;
import ru.dmitartur.service.ProductService;

import java.util.Optional;

/**
 * gRPC —Å–µ—Ä–≤–µ—Ä –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å –ø—Ä–æ–¥—É–∫—Ç–∞–º–∏
 */
@Slf4j
@GrpcService
@RequiredArgsConstructor
public class ProductGrpcServer extends ProductServiceGrpc.ProductServiceImplBase {

    private final ProductService productService;

    @Override
    public void findByArticle(FindByArticleRequest request, StreamObserver<FindByArticleResponse> responseObserver) {
        try {
            String article = request.getArticle();
            log.info("üîç gRPC: Searching product by article: {}", article);

            Optional<Product> productOpt = productService.findByArticle(article);
            
            FindByArticleResponse.Builder responseBuilder = FindByArticleResponse.newBuilder();
            
            if (productOpt.isPresent()) {
                Product product = productOpt.get();
                ProductInfoDto productDto = convertToProductInfoDto(product);
                
                responseBuilder.setFound(true)
                             .setProduct(productDto);
                
                log.info("‚úÖ gRPC: Product found by article: {} -> id={}, name={}", 
                        article, product.getId(), product.getName());
            } else {
                responseBuilder.setFound(false);
                log.info("‚ùå gRPC: Product not found by article: {}", article);
            }
            
            responseObserver.onNext(responseBuilder.build());
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            log.error("‚ùå gRPC: Error searching product by article: {}", e.getMessage(), e);
            
            FindByArticleResponse errorResponse = FindByArticleResponse.newBuilder()
                    .setFound(false)
                    .setErrorMessage("Error searching product: " + e.getMessage())
                    .build();
            
            responseObserver.onNext(errorResponse);
            responseObserver.onCompleted();
        }
    }

    /**
     * –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä–æ–≤–∞—Ç—å Product –≤ ProductInfoDto
     */
    private ProductInfoDto convertToProductInfoDto(Product product) {
        return ProductInfoDto.newBuilder()
                .setId(product.getId())
                .setName(product.getName() != null ? product.getName() : "")
                .setArticle(product.getArticle() != null ? product.getArticle() : "")
                .setSku("") // SKU –Ω–µ –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤ Product entity
                .setStock(product.getQuantity() != null ? product.getQuantity() : 0)
                .setBarcode(product.getBarcode() != null ? product.getBarcode() : "")
                .setDescription("") // Description –Ω–µ –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤ Product entity
                .setPrice(product.getPrice() != null ? product.getPrice().toString() : "0")
                .setCreatedAt("") // CreatedAt –Ω–µ –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤ Product entity
                .setUpdatedAt("") // UpdatedAt –Ω–µ –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤ Product entity
                .build();
    }
}
